go/yacc/compute.output

state 0
	$accept: .main $end 

	NUM  shift 4
	.  error

	expr  goto 2
	n  goto 3
	main  goto 1

state 1
	$accept:  main.$end 

	$end  accept
	.  error


state 2
	main:  expr.    (1)

	.  reduce 1 (src line 25)


state 3
	expr:  n.    (2)
	n:  n.NUM 

	NUM  shift 5
	.  reduce 2 (src line 29)


state 4
	n:  NUM.    (3)

	.  reduce 3 (src line 34)


state 5
	n:  n NUM.    (4)

	.  reduce 4 (src line 39)


4 terminals, 4 nonterminals
5 grammar rules, 6/16000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
53 working sets used
memory: parser 2/240000
0 extra closures
2 shift entries, 1 exceptions
3 goto entries
0 entries saved by goto default
Optimizer space used: output 5/240000
5 table entries, 0 zero
maximum spread: 4, maximum offset: 4
